--- a/covenant/index.html
+++ b/covenant/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="build/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/build/main.css">
     <title>Title</title>
 </head>
 <body>
-    <p>Test</p>
+    <div id="wrapper">
+    </div>
+    <script src="/build/main.js"></script>
 </body>
 </html>
