--- a/covenant/public/index.html
+++ b/covenant/public/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="/build/main.css">
+    <link rel="stylesheet" type="text/css" href="build/main.css">
     <title>Title</title>
 </head>
 <body>
     <div id="wrapper">
     </div>
-    <script src="/build/main.js"></script>
+    <script src="build/main.js"></script>
 </body>
 </html>
