Начал API с использованием fetch Реализация регистрации

--- a/covenant/public/index.html
+++ b/covenant/public/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="wrapper">
     </div>
+    <script src="build/API.js"></script>
     <script src="build/main.js"></script>
 </body>
 </html>
