--- a/covenant/public/login.html
+++ b/covenant/public/login.html
@@ -10,15 +10,17 @@
 <body>
 <div id="wrapper">
     <div class="header">
-        <div class="logo">
-            <div class="logo__title">Covenant</div>
-        </div>
-        <div class="login__link">
-            Log In
-        </div>
-        <div class="signup__link">
-            Sign Up
-        </div>
+        <ul class="header__list">
+            <li class="header__list_home">
+                <a href="#" class="header__list_home__link">Covenant</a>
+            </li>
+            <li class="header__list_signup">
+                <a href="#" class="header__list_signup__link">Sign Up</a>
+            </li>
+            <li class="header__list_login">
+                <a href="#" class="header__list_login__link">Log In</a>
+            </li>
+        </ul>
     </div>
     <div class="container">
         <div class="login">
