added minification images in gulpfile

--- a/covenant/public/login.html
+++ b/covenant/public/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Megrim" />
-    <link rel="stylesheet" type="text/css" href="build/main.css">
+    <link rel="stylesheet" type="text/css" href="build/css/main.css">
     <title>Login</title>
 </head>
 <body>
