--- a/covenant/public/signup.html
+++ b/covenant/public/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Megrim" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="build/main.css">
+    <link rel="stylesheet" type="text/css" href="build/css/main.css">
     <title>Signup</title>
 </head>
 <body>
