added tabs on profile

--- a/covenant/public/profile.html
+++ b/covenant/public/profile.html
@@ -52,7 +52,63 @@
                     </div>
                 </div>
             </div>
-
+            <div class="music">
+                <ul class="tabs">
+                    <li>
+                        <input type="radio" name="tabs" id="tab-1" checked>
+                        <label class="tab__label" for="tab-1">Tracks</label>
+                        <div class="tab-content">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua.
+                        </div>
+                    </li>
+                    <li>
+                        <input type="radio" name="tabs" id="tab-2">
+                        <label class="tab__label" for="tab-2">History</label>
+                        <div class="tab-content">
+                            Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat.
+                        </div>
+                    </li>
+                    <li>
+                        <input type="radio" name="tabs" id="tab-3">
+                        <label class="tab__label" for="tab-3">Albums</label>
+                        <div class="tab-content">
+                            Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat.
+                        </div>
+                    </li>
+                    <li>
+                        <input type="radio" name="tabs" id="tab-4">
+                        <label class="tab__label" for="tab-4">Artists</label>
+                        <div class="tab-content">
+                            Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat.
+                        </div>
+                    </li>
+                    <li>
+                        <input type="radio" name="tabs" id="tab-5">
+                        <label class="tab__label" for="tab-5">Playlists</label>
+                        <div class="tab-content">
+                            Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat.
+                        </div>
+                    </li>
+                    <li>
+                        <input type="radio" name="tabs" id="tab-6">
+                        <label class="tab__label" for="tab-6">Friends</label>
+                        <div class="tab-content">
+                            Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat.
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="footer">
