Удален gulpfile, переделана структура проекта

--- a/covenant/public/index.html
+++ b/covenant/public/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="build/css/main.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <title>Title</title>
 </head>
 <body>
     <div id="wrapper">
     </div>
-    <script src="build/js/API.js"></script>
-    <script src="build/js/main.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
