--- a/covenant/public/index.html
+++ b/covenant/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Megrim" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="./services/mustache/mustache.js" ></script>
     <link rel="stylesheet" type="text/css" href="index.css">
     <title>Title</title>
 </head>
