--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Megrim" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="./services/mustache/mustache.js" ></script>
     <link rel="stylesheet" type="text/css" href="index.css">
-    <title>Title</title>
+    <title>Covenant</title>
 </head>
 <body>
     <div id="wrapper">
     </div>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="build/bundle.js"></script>
 </body>
 </html>
