router use regex, editors begin

--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Megrim" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="build/bundle.css">
+    <link rel="stylesheet" type="text/css" href="/build/bundle.css">
     <title>Covenant</title>
 </head>
 <body>
 
-    <script type="module" src="build/bundle.js"></script>
+    <script type="module" src="/build/bundle.js"></script>
 </body>
 </html>
